Utilizing URL connections to create sockets and read from a buffer