@@ -25,6 +25,9 @@ package com.company;
 
 // URI's that specify schemes are called absolute URIs, else if it doesn't, it's a relative URI
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -34,17 +37,50 @@ public class Main {
 
     public static void main(String[] args) {
         try {
-//            URI uri = new URI("db://username:password@myserver.com:5000/catalogue/phones?os=android#samsung");
-            URI baseUri = new URI("http://username:password@myserver.com:5000");
-            URI uri = new URI("/catalogue/phones?os=android#samsung"); // URI is not absolute, can get error message
-            // can't get an absolute URI from a relative URI.
-            // When I want to access a web page on myserver.com host, combining base and relative URIs using resolve()
-            URI resolvedUri = baseUri.resolve(uri);
+// Since all URLs are URIs, you can convert URLs to URIs, and call the methods that return the components of a URI
+            URL url = new URL("http://example.org");
 
-            URL url = resolvedUri.toURL();
-//            URL url = uri.toURL();
-            System.out.println("URL = " + url);
-            //            URI uri = new URI("hello"); //
+            BufferedReader inputStream = new BufferedReader(
+                    new InputStreamReader(url.openStream())); // opening a connection to the URL, creating socket
+                    // wrapping the inputStream (url.openStream()) in a InputStreamReader and wrapping that
+            // in a bufferedReader as well.
+            String line = "";
+            while (line != null){
+                line = inputStream.readLine();
+                System.out.println(line);
+            }
+            inputStream.close();
+
+//            URI uri = url.toURI();
+
+//            URI baseUri = new URI("http://username:password@myserver.com:5000");
+//            URI uri1 = new URI("/catalogue/phones?os=android#samsung"); // URI is not absolute, can get error message
+//            URI uri2 = new URI("/catalogue/tvs?manufacturer=samsung");
+//            URI uri3 = new URI("/stores/locations?zip=12345");
+//
+////            URI uri = new URI("db://username:password@myserver.com:5000/catalogue/phones?os=android#samsung");
+////            URI uri = new URI("hello"); //
+//
+//            // can't get an absolute URI from a relative URI.
+//            // When I want to access a web page on myserver.com host, combining base and relative URIs using resolve()
+//            URI resolvedUri1 = baseUri.resolve(uri1);
+//            URI resolvedUri2 = baseUri.resolve(uri2);
+//            URI resolvedUri3 = baseUri.resolve(uri3);
+//            // better to use a base URI with relative URIs
+//
+//            URL url1 = resolvedUri1.toURL();
+//            System.out.println("URL 1 = " + url1);
+//            URL url2 = resolvedUri2.toURL();
+//            System.out.println("URL 2 = " + url2);
+//            URL url3 = resolvedUri3.toURL();
+//            System.out.println("URL 3 = " + url3);
+//
+//            URI relativizedURI = baseUri.relativize(resolvedUri2);
+//            System.out.println("Relative URI = " + relativizedURI);
+
+
+            //            URL url = uri.toURL();
+
 // gathering the 9 components
 //            System.out.println("Scheme = " + uri.getScheme());
 //            System.out.println("Scheme-specific part = " + uri.getSchemeSpecificPart());
@@ -55,11 +91,15 @@ public class Main {
 //            System.out.println("Path = " + uri.getPath());
 //            System.out.println("Query = " + uri.getQuery());
 //            System.out.println("Fragment = " + uri.getFragment());
-        } catch (URISyntaxException  e){
-            System.out.println("URI Bad Syntax: " + e.getMessage());
-        } catch (MalformedURLException e){
-            System.out.println("URL Malformed: " + e.getMessage());
+
         }
+
+        catch (IOException e){
+            System.out.println("IOException: " + e.getMessage());
+        }
+//        catch (MalformedURLException e){
+//            System.out.println("URL Malformed: " + e.getMessage());
+//        }
 
     }
 }
